--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,66 @@
-body,
-div,
-ul,
-li,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+body, div, ul, li, p,
+h1, h2, h3, h4, h5, h6 {
   padding:0;
   margin:0;
   font-family: "Roboto", sans-serif;
+}
+
+h2, h4, h5 {
+  padding:10px 5%;
+}
+
+h1 {
+  font-size: 40px;
+  color: #26ACD9;
+  line-height: 48px;
+  display: inline;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 24px;
+  color: #614B3A;
+  line-height: 29px;
+}
+
+h2.blue {
+  color: #614B3A;
+}
+
+h3 {
+  font-style: italic;
+  font-size: 20px;
+  color: #26ACD9;
+  line-height: 22px;
+  padding:10px 5% 10px 10%;
+}
+
+h4 {
+  font-weight: bold;
+  font-size: 14px;
+  color: #26ACD9;
+  line-height: 17px;
+}
+
+span.welcome-message {
+  color: black;
+}
+
+p {
+  font-size: 14px;
+  color: black;
+  line-height: 21px;
+}
+
+a {
+  color: #26ACD9;
+  text-decoration: none;
+  margin-top: 10px;
+  display: block;
+}
+
+#education h2{
+  padding-left: 10%;
 }
 
 .clear-fix {
@@ -24,48 +73,15 @@ h6 {
   padding: 0 5%;
 }
 
-h1 {
-  font-size: 40px;
-  color: #f5a623;
-  line-height: 48px;
-  display: inline;
+.education-entry {
+  padding-left: 10%;
+  margin-bottom: 20px;
 }
-
-h2 {
-  font-weight: bold;
-  font-size: 24px;
-  color: #999;
-  line-height: 29px;
-  padding: 10px;
-}
-
-h3 {
-  font-style: italic;
-  font-size: 20px;
-  color: #000;
-  line-height: 22px;
-}
-
-h4 {
-  font-weight: bold;
-  font-size: 14px;
-  color: #4a4a4a;
-  line-height: 17px;
-}
-
-h2,
-h3,
-h4,
-h5 {
-  padding:10px 5%;
-
-}
-
 
 .date-text {
   font-style: italic;
   font-size: 14px;
-  color: #999;
+  color: #614B3A;
   line-height: 16px;
   float: left;
 }
@@ -73,23 +89,9 @@ h5 {
 .location-text {
   font-style: italic;
   font-size: 14px;
-  color: #999;
+  color: #614B3A;
   line-height: 16px;
   float: right;
-
-}
-
-p {
-  font-size: 14px;
-  color: #333;
-  line-height: 21px;
-}
-
-a {
-  color: #1199c3;
-  text-decoration: none;
-  margin-top: 10px;
-  display: block;
 }
 
 .welcome-message {
@@ -100,16 +102,16 @@ a {
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: #26ACD9 ;
   display: none;
 }
 
-.orange {
-  background-color: #f5ae23;
+.blue {
+  background-color: #26ACD9;
 }
 
-.orange-text {
-  color: #f5ae23;
+.blue-text {
+  color: #26ACD9;
 }
 
 .white-text {
@@ -118,18 +120,17 @@ a {
 }
 
 .gray {
-  background-color: #f3f3f3;
+  background-color: #F3F3F3;
   padding-bottom: 10px;
   clear:both;
 }
 
 .dark-gray {
-  background-color: #4a4a4a;
+  background-color: #614B3A;
 }
 
-/* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color: #614B3A;
 }
 
 .flex-box {
@@ -139,6 +140,39 @@ a {
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 10px;
+}
+
+.container {
+  width: 100%;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#workExperience {
+  width: 100%;
+  order: 0;
+}
+
+#education {
+  width: 50%;
+  order: 1;
+}
+
+#projects {
+  width: 50%;
+  order: 2;
+}
+
+#mapDiv {
+  width: 100%;
+  order: 3;
+}
+
+#skills {
+  flex-direction: column;
 }
 
 .center-content {
@@ -168,6 +202,7 @@ span {
   text-align: center;
 }
 
+
 /* Media queries to handle various device widths */
 
 @media only screen and (max-width: 1024px) {
@@ -191,6 +226,26 @@ span {
   }
   .welcome-message {
     display: none;
+  }
+  #education {
+    width: 100%;
+    order: 1;
+  }
+  #projects {
+    width: 100%;
+    order: 2;
+  }
+  h3 {
+    padding-left: 5%;
+  }
+  .education-entry {
+    padding-left: 5%;
+  }
+  #education h2{
+    padding-left: 5%;
+  }
+  #skills {
+    flex-direction: row;
   }
 }
 
